<resources>
    <string name="app_name">ProfNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_notes">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profnotes">MyNotes</string>
    <string name="entrance">Вход</string>
    <string name="hint_1">Пожалуйста, войдите для продолжения</string>
    <string name="hint_edittext_login">"   Номер телефона или логин"</string>
    <string name="hint_edittext_password">"   Пароль"</string>
    <string name="hint_2">Или войдите без аккаунта, если не хотите пользоваться всеми возможностьями приложения</string>
    <string name="hint_3">Не помните словй пароль? Восстановите пароль</string>
    <string name="button_entrance">ВОЙТИ</string>
    <!-- Login -->
    <string name="login">Вход</string>
    <string name="hintLogin">Пожалуйста, войдите для продолжения</string>
    <string name="hintLoginOrPhone">Номер телефона или логин</string>
    <string name="password">Пароль</string>
    <string name="loginWithoutAccount">Или войдите без аккаунта, если не хотите пользоваться всеми возможностями</string>
    <string name="hintForgotPassword">Не помните свой пароль? Восстановите пароль</string>
    <string name="btnLogin">Войти</string>
    <!--    Home-->
    <string name="news">Новости</string>
    <string name="today">Сегодня</string>
    <string name="hint_search">Поиск по задачам</string>
    <string name="add_friend">Принять</string>
    <string name="del_friend">Отклонить</string>
    <string name="title_add_friend">%s хочет добавить вас в друзья</string>

    <!--    Add New Note-->
    <string name="place_holder_text_field">Начните вводить текст здесь…</string>
    <string name="place_holder_text_field_date">Введите дату в формате дд/мм/гггг</string>
    <string name="title_note">Название задачи</string>
    <string name="description_note">Описание задачи</string>
    <string name="date_note">Дата выполнения</string>
    <string name="circle_friends">Круг друзей</string>

    <!--    Edit Note-->
    <string name="edit_note">Редактировать</string>
    <string name="marked_friends">Отмеченные друзья</string>
    <string name="аttached_files">Добавленные файлы</string>
    <string name="save">Сохранить</string>
    <string name="status_note">Статус задачи</string>
    <string name="status_note_more">Статус задачи : %s</string>
    <string name="count_friends">Вы и ваших %s друзей</string>
</resources>