<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_rounded_card"
    android:paddingBottom="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivUser"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_test_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="40dp" />

    <TextView
        android:id="@+id/tvFriendsRequest"
        style="@style/TextH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/title_add_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivUser"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btAcceptFriend"
        style="@style/TextH1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/green"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/add_friend"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/btRejectFriend"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUser" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRejectFriend"
        style="@style/TextH1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/del_friend"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAcceptFriend"
        app:layout_constraintTop_toBottomOf="@id/ivUser" />


</androidx.constraintlayout.widget.ConstraintLayout>