<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetEnd="@id/end"
        motion:constraintSetStart="@id/start"
        app:duration="0">
        <OnSwipe
            app:dragDirection="dragUp"
            app:touchAnchorId="@id/etSearchNotes"
            app:touchAnchorSide="top" />

    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/ivUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_test_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="25dp" />

        <Constraint
            android:visibility="visible"
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/circe_bold"
            android:text="Доброе утро"
            android:textColor="@color/profsoft_3"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivUser" />

        <Constraint
            android:id="@+id/tvName"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Дарья"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

        <Constraint
            android:id="@+id/ib_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_notification_profsoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/tvTodayTitle"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/today"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/ivUser" />

        <Constraint
            android:id="@+id/tvNewsTitle"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTodayTitle"
            app:layout_constraintTop_toTopOf="@+id/tvTodayTitle" />

        <Constraint
            android:id="@+id/tvTodayDescription"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Понедельник, 11 июля"
            app:layout_constraintEnd_toStartOf="@+id/tvNewsDescription"
            app:layout_constraintStart_toStartOf="@+id/tvTodayTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayTitle" />

        <Constraint
            android:id="@+id/tvNewsDescription"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="4 новые заметки"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/tvNewsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvNewsTitle" />

        <Constraint
            android:id="@+id/etSearchNotes"
            style="@style/TextH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="8dp"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:layout_constraintEnd_toEndOf="@+id/tvNewsDescription"
            app:layout_constraintStart_toStartOf="@+id/tvTodayDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayDescription"
            tools:ignore="TextFields" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/ivUser"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_test_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="25dp"
            />

        <Constraint
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/circe_bold"
            android:text="Доброе утро"
            android:textColor="@color/profsoft_3"
            android:textSize="16sp"
            android:visibility="gone"
            />

        <Constraint
            android:id="@+id/tvName"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Дарья"
            android:visibility="gone"
            />

        <Constraint
            android:id="@+id/ib_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_notification_profsoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/tvTodayTitle"
            style="@style/TextH2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/today"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/ivUser"
            />

        <Constraint
            android:id="@+id/tvNewsTitle"
            style="@style/TextH2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/gray"
            />

        <Constraint
            android:id="@+id/tvTodayDescription"
            style="@style/TextH2"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Понедельник, 11 июля"
            />

        <Constraint
            android:id="@+id/tvNewsDescription"
            style="@style/TextH2"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="4 новые заметки" />

        <Constraint
            android:id="@+id/etSearchNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="8dp"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:padding="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivUser"
            app:layout_constraintEnd_toStartOf="@id/ib_notification"/>
    </ConstraintSet>
</MotionScene>